The Best CRM Ever

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section class="search">
         <input type="text" placeholder="Введіть ключові слова для пошуку">
-        <button onclick="" title="Відкрити вибір фільтрів пошуку">
+        <button id ='filters' title="Відкрити вибір фільтрів пошуку">
 				<!-- <p>Фільтри</p> -->
 				<svg class="r" viewBox="0 0 512 512"><path d="M463.952 0H48.057C5.419 0-16.094 51.731 14.116 81.941L176 243.882V416c0 15.108 7.113 29.335 19.2 40l64 47.066c31.273 21.855 76.8 1.538 76.8-38.4V243.882L497.893 81.941C528.042 51.792 506.675 0 463.952 0zM288 224v240l-64-48V224L48 48h416L288 224z"/></svg>
 
@@ -49,17 +49,6 @@
 
     <section class="filters">
         <form>
-            <!-- <div>
-					Hello
-					<ul>
-						<li>
-							<lable><input type="checkbox">Петро</lable>
-						</il>
-						<li>
-							<lable><input type="checkbox">Петро</lable>
-						</li>
-					</ul>
-				</div> -->
             <div class="meneger">Менеджер
                 <ul>
                     <li>
@@ -127,14 +116,6 @@
                 <br>
                 <lable for="since">До: </lable>
                 <input id="since" type="date">
-                <!-- <ul>
-						<li>
-							<lable>З   <input type="date"></lable>
-						</il>
-						<li>
-							<lable>По   <input type="date"></lable>
-						</li>
-					</ul> -->
             </div>
             <input type="reset">
             <lable class="show_all"><input type="checkbox">Показати Все</lable>
