--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         CRM
     </title>
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/jquery-3.5.1.min.js"></script> 
+    <script src="js/jquery-3.5.1.min.js"></script>
 </head>
 
 <body class="th1">
@@ -38,7 +38,7 @@
 
     <section class="search">
         <input class="resp" type="text" placeholder="Введіть ключові слова для пошуку">
-        <button class="resp" id ='filters' title="Відкрити вибір фільтрів пошуку">
+        <button class="resp" id='filters' title="Відкрити вибір фільтрів пошуку">
 				<!-- <p>Фільтри</p> -->
 				<svg class="r" viewBox="0 0 512 512"><path d="M463.952 0H48.057C5.419 0-16.094 51.731 14.116 81.941L176 243.882V416c0 15.108 7.113 29.335 19.2 40l64 47.066c31.273 21.855 76.8 1.538 76.8-38.4V243.882L497.893 81.941C528.042 51.792 506.675 0 463.952 0zM288 224v240l-64-48V224L48 48h416L288 224z"/></svg>
 
@@ -293,68 +293,68 @@
         </table>
     </section>
 
-     <section class="card">
-			<div class="svg">
-				<svg class="r" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M248 104c-53 0-96 43-96 96s43 96 96 96 96-43 96-96-43-96-96-96zm0 144c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm0-240C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-49.7 0-95.1-18.3-130.1-48.4 14.9-23 40.4-38.6 69.6-39.5 20.8 6.4 40.6 9.6 60.5 9.6s39.7-3.1 60.5-9.6c29.2 1 54.7 16.5 69.6 39.5-35 30.1-80.4 48.4-130.1 48.4zm162.7-84.1c-24.4-31.4-62.1-51.9-105.1-51.9-10.2 0-26 9.6-57.6 9.6-31.5 0-47.4-9.6-57.6-9.6-42.9 0-80.6 20.5-105.1 51.9C61.9 339.2 48 299.2 48 256c0-110.3 89.7-200 200-200s200 89.7 200 200c0 43.2-13.9 83.2-37.3 115.9z"/></svg>
-				<svg class="h" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"/></svg>
-			</div>
-			<div class="data">
-				<div>
-					<h1>ПІБ</h1>
-					<ul>
-						<li>Іванов</li>
-						<li>Іван</li>
-						<li>Іванович</li>
-					</ul>
-				</div>
-				<div>
-					<h1>Пошта</h1>
-					<ul>
-						<li>ivanivanov@gmail.com</li>
-						<li>ivanivanov@ukr.net</li>
-					</ul>
-				</div>
-				<div>
-					<h1>Телефон</h1>
-					<ul>
-						<li>+380671223465</li>
-						<li>+380503214480</li>
-					</ul>
-				</div>
-				<div>
-					<h1>Місто</h1>
-					<ul>
-						<li>Київ</li>
-					</ul>
-				</div>
-				<div>
-					<h1>Компанія</h1>
-					<ul>
-						<li>Тесла</li>
-					</ul>
-				</div>
-				<div>
-					<h1>Статус</h1>
-					<ul>
-						<li>Випускник</li>
-					</ul>
-				</div>
-				<div>
-					<h1>Курси</h1>
-					<ul>
-						<li>Маляр</li>
-						<li>Столяр</li>
-					</ul>
-				</div>
-				<div>
-					<h1>Менеджер</h1>
-					<ul>
-						<li>Марина</li>
-					</ul>
-				</div>
-			</div>
-		</section>
-        <script src="js/main.js"></script>
+    <section class="card">
+        <div class="svg">
+            <svg class="r" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M248 104c-53 0-96 43-96 96s43 96 96 96 96-43 96-96-43-96-96-96zm0 144c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm0-240C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-49.7 0-95.1-18.3-130.1-48.4 14.9-23 40.4-38.6 69.6-39.5 20.8 6.4 40.6 9.6 60.5 9.6s39.7-3.1 60.5-9.6c29.2 1 54.7 16.5 69.6 39.5-35 30.1-80.4 48.4-130.1 48.4zm162.7-84.1c-24.4-31.4-62.1-51.9-105.1-51.9-10.2 0-26 9.6-57.6 9.6-31.5 0-47.4-9.6-57.6-9.6-42.9 0-80.6 20.5-105.1 51.9C61.9 339.2 48 299.2 48 256c0-110.3 89.7-200 200-200s200 89.7 200 200c0 43.2-13.9 83.2-37.3 115.9z"/></svg>
+            <svg class="h" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"/></svg>
+        </div>
+        <div class="fields">
+            <div>
+                <h1>ПІБ</h1>
+                <ul>
+                    <li>Іванов</li>
+                    <li>Іван</li>
+                    <li>Іванович</li>
+                </ul>
+            </div>
+            <div>
+                <h1>Пошта</h1>
+                <ul>
+                    <li>ivanivanov@gmail.com</li>
+                    <li>ivanivanov@ukr.net</li>
+                </ul>
+            </div>
+            <div>
+                <h1>Телефон</h1>
+                <ul>
+                    <li>+380671223465</li>
+                    <li>+380503214480</li>
+                </ul>
+            </div>
+            <div>
+                <h1>Місто</h1>
+                <ul>
+                    <li>Київ</li>
+                </ul>
+            </div>
+            <div>
+                <h1>Компанія</h1>
+                <ul>
+                    <li>Тесла</li>
+                </ul>
+            </div>
+            <div>
+                <h1>Статус</h1>
+                <ul>
+                    <li>Випускник</li>
+                </ul>
+            </div>
+            <div>
+                <h1>Курси</h1>
+                <ul>
+                    <li>Маляр</li>
+                    <li>Столяр</li>
+                </ul>
+            </div>
+            <div>
+                <h1>Менеджер</h1>
+                <ul>
+                    <li>Марина</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
