--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>
         CRM
     </title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/jquery-3.5.1.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -387,6 +388,7 @@
         document.getElementsByClassName('filters')[0].style.display = 'none';
         document.getElementById('filters').onclick = toggleFilters;
     </script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
