--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             }
         }
 
-        // document.getElementsByClassName('filters')[0].style.display = 'none';
+        document.getElementsByClassName('filters')[0].style.display = 'none';
         document.getElementById('filters').onclick = toggleFilters;
     </script>
     <script src="js/jquery-3.5.1.min.js"></script>
