--- a/index.html
+++ b/index.html
@@ -299,91 +299,89 @@
         </table>
     </section>
 
-    <section class="profile">
-        <div class="card">
-            <div class="main">
-                <svg class="r" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M248 104c-53 0-96 43-96 96s43 96 96 96 96-43 96-96-43-96-96-96zm0 144c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm0-240C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-49.7 0-95.1-18.3-130.1-48.4 14.9-23 40.4-38.6 69.6-39.5 20.8 6.4 40.6 9.6 60.5 9.6s39.7-3.1 60.5-9.6c29.2 1 54.7 16.5 69.6 39.5-35 30.1-80.4 48.4-130.1 48.4zm162.7-84.1c-24.4-31.4-62.1-51.9-105.1-51.9-10.2 0-26 9.6-57.6 9.6-31.5 0-47.4-9.6-57.6-9.6-42.9 0-80.6 20.5-105.1 51.9C61.9 339.2 48 299.2 48 256c0-110.3 89.7-200 200-200s200 89.7 200 200c0 43.2-13.9 83.2-37.3 115.9z"/></svg>
-                <svg class="h" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"/></svg>
+    <section class="card">
+        <div class="main">
+            <svg class="r" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M248 104c-53 0-96 43-96 96s43 96 96 96 96-43 96-96-43-96-96-96zm0 144c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm0-240C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-49.7 0-95.1-18.3-130.1-48.4 14.9-23 40.4-38.6 69.6-39.5 20.8 6.4 40.6 9.6 60.5 9.6s39.7-3.1 60.5-9.6c29.2 1 54.7 16.5 69.6 39.5-35 30.1-80.4 48.4-130.1 48.4zm162.7-84.1c-24.4-31.4-62.1-51.9-105.1-51.9-10.2 0-26 9.6-57.6 9.6-31.5 0-47.4-9.6-57.6-9.6-42.9 0-80.6 20.5-105.1 51.9C61.9 339.2 48 299.2 48 256c0-110.3 89.7-200 200-200s200 89.7 200 200c0 43.2-13.9 83.2-37.3 115.9z"/></svg>
+            <svg class="h" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"/></svg>
+        </div>
+        <div class="fields">
+            <div>
+                <p>ПІБ</p>
+                <ul>
+                    <li><h3>Іванов</h3></li>
+                    <li><h3>Іван</h3></li>
+                    <li><h3>Іванович</h3></li>
+                </ul>
             </div>
-            <div class="fields">
-                <div>
-                    <p>ПІБ</p>
-                    <ul>
-                        <li><h3>Іванов</h3></li>
-                        <li><h3>Іван</h3></li>
-                        <li><h3>Іванович</h3></li>
-                    </ul>
-                </div>
-                <div>
-                    <p>Місто</p>
-                    <ul>
-                        <li><h3>Київ</h3></li>
-                    </ul>
-                </div>
-                <div>
-                    <p>Компанія</p>
-                    <ul>
-                        <li><h3>Тесла</h3></li>
-                    </ul>
-                </div>
-                <div class="wide">
-                    <p>Телефон</p>
-                    <ul>
-                        <li><h3>+380671223465</h3></li>
-                        <li><h3>+380503214480</h3></li>
-                    </ul>
-                    
-                </div>
-                <div class="wide">
-                    <p>Пошта</p>
-                    <ul>
-                        <li><h3>ivanivanov@gmail.com</h3></li>
-                        <li><h3>ivanivanov@ukr.net</h3></li>
-                    </ul>
-                </div>
-                <div class="tall">
-                    <p>Курси</p>
-                    <ul>
-                        <li><h3>Маляр</h3></li>
-                        <li><h3>Столяр</h3></li>
-                    </ul>
-                </div>
-                <div>
-                    <p>Cтатус</p>
-                    <ul>
-                        <li><h3>Випускник</h3></li>
-                    </ul>
-                </div>
-                <div>
-                    <p>Менеджер</p>
-                    <ul>
-                        <li><h3>Петро</h3></li>
-                    </ul>
-                </div>
+            <div>
+                <p>Місто</p>
+                <ul>
+                    <li><h3>Київ</h3></li>
+                </ul>
             </div>
-            <div class="history">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Дата</th>
-                            <th>Контакт</th>
-                            <th>Результат</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>01.05.2020</td>
-                            <td>ivanivanov@ukr.net</td>
-                            <td>Назначив дзвіонок</td>
-                        </tr>
-                        <tr>
-                            <td>05.10.2020</td>
-                            <td>+380671223465</td>
-                            <td>Купив курс столяра</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div>
+                <p>Компанія</p>
+                <ul>
+                    <li><h3>Тесла</h3></li>
+                </ul>
             </div>
+            <div class="wide">
+                <p>Телефон</p>
+                <ul>
+                    <li><h3>+380671223465</h3></li>
+                    <li><h3>+380503214480</h3></li>
+                </ul>
+                
+            </div>
+            <div class="wide">
+                <p>Пошта</p>
+                <ul>
+                    <li><h3>ivanivanov@gmail.com</h3></li>
+                    <li><h3>ivanivanov@ukr.net</h3></li>
+                </ul>
+            </div>
+            <div class="tall">
+                <p>Курси</p>
+                <ul>
+                    <li><h3>Маляр</h3></li>
+                    <li><h3>Столяр</h3></li>
+                </ul>
+            </div>
+            <div>
+                <p>Cтатус</p>
+                <ul>
+                    <li><h3>Випускник</h3></li>
+                </ul>
+            </div>
+            <div>
+                <p>Менеджер</p>
+                <ul>
+                    <li><h3>Петро</h3></li>
+                </ul>
+            </div>
+        </div>
+        <div class="history">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Дата</th>
+                        <th>Контакт</th>
+                        <th>Результат</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>01.05.2020</td>
+                        <td>ivanivanov@ukr.net</td>
+                        <td>Назначив дзвіонок</td>
+                    </tr>
+                    <tr>
+                        <td>05.10.2020</td>
+                        <td>+380671223465</td>
+                        <td>Купив курс столяра</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </section>
     <script>
