--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         </nav>
         <div class="info">
-            <p>2020 @ МІБ</p>
+            <p>2020 @ Bohdan</p>
         </div>
     </header>
 
